# lib/db/src/schema/index.ts
@@ -5,3 +5,4 @@ export * from "./faq";
 export * from "./services";
 export * from "./site-settings";
 export * from "./delivery-zones";
+export * from "./page-content";
